<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@android:color/black">

    <TextView
        android:id="@+id/display"
        android:textSize="50sp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#fff"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:rowCount="5"
        android:columnCount="4"
        android:background="#3c3f41"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/display">

        <!-- ROW 1 -->
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:text="@string/seven"
            android:background="#3c3f41"
            android:textSize="30sp"
            android:id="@+id/b7" />
        <Button
            android:text="@string/eight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:background="#3c3f41"
            android:textSize="30sp"
            android:id="@+id/b8" />
        <Button
            android:text="@string/nine"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_rowWeight="1"
            android:background="#3c3f41"
            android:id="@+id/b9" />
        <Button
            android:text="@string/delete"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_rowWeight="1"
            android:background="#313335"
            android:textColor="@color/white"
            android:id="@+id/bDel" />

        <!-- ROW 2 -->
        <Button
            android:text="@string/four"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:background="#3c3f41"
            android:id="@+id/b4" />
        <Button
            android:text="@string/five"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_rowWeight="1"
            android:background="#3c3f41"
            android:id="@+id/b5" />
        <Button
            android:text="@string/six"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_rowWeight="1"
            android:background="#3c3f41"
            android:id="@+id/b6" />
        <Button
            android:text="@string/division"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_rowWeight="1"
            android:background="#313335"
            android:textColor="@color/white"
            android:id="@+id/bDiv" />

        <!-- ROW 3 -->
        <Button
            android:text="@string/one"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_rowWeight="1"
            android:background="#3c3f41"
            android:id="@+id/b1" />
        <Button
            android:text="@string/two"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_rowWeight="1"
            android:background="#3c3f41"
            android:id="@+id/b2" />
        <Button
            android:text="@string/three"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_rowWeight="1"
            android:background="#3c3f41"
            android:id="@+id/b3" />
        <Button
            android:text="@string/multiplication"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_rowWeight="1"
            android:background="#313335"
            android:textColor="@color/white"
            android:id="@+id/bMulti" />

        <!-- ROW 4 -->
        <Button
            android:text="@string/dot"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_rowWeight="1"
            android:background="#3c3f41"
            android:id="@+id/bDot" />

        <Button
            android:text="@string/zero"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_rowWeight="1"
            android:background="#3c3f41"
            android:id="@+id/b0" />

        <Button
            android:background="#3c3f41"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

        <Button
            android:text="@string/subtraction"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_rowWeight="1"
            android:background="#313335"
            android:textColor="@color/white"
            android:id="@+id/bSub" />

        <!-- ROW 5 -->
        <Button
            android:text="@string/equal"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_columnSpan="3"
            android:gravity="center"
            android:layout_rowWeight="1"
            android:background="#21b70d"
            android:textColor="@color/white"
            android:id="@+id/bEqual" />

        <Button
            android:text="@string/addition"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_rowWeight="1"
            android:background="#313335"
            android:id="@+id/bPlus" />

    </GridLayout>

</RelativeLayout>
