<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGray">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Lägg till arbetsdag"
        android:textColor="@color/caldroid_darker_gray"
        android:textSize="40sp"
        android:id="@+id/header"
        android:textAlignment="center" />
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/dark_red"
        android:layout_below="@id/header"
        android:id="@+id/line"
        android:layout_marginBottom="15dp" />

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:id="@+id/date"
        android:background="@android:drawable/dialog_holo_dark_frame"
        android:text="Välj datum"
        android:textColor="@color/white"
        android:layout_below="@+id/date_label"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp" />

    <TextView
        android:text="@string/start_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/start_label"
        android:layout_below="@id/date"
        android:textColor="@color/caldroid_black"
        android:layout_marginStart="10dp" />

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:id="@+id/start"
        android:background="@android:drawable/dialog_holo_dark_frame"
        android:text="Välj tid"
        android:textColor="@color/white"
        android:layout_below="@+id/start_label"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp" />

    <TextView
        android:text="@string/end_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/end_label"
        android:layout_below="@id/start"
        android:textColor="@color/caldroid_black"
        android:layout_marginStart="10dp" />

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:id="@+id/end"
        android:layout_below="@id/end_label"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/dialog_holo_dark_frame"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:text="Välj tid"
        android:layout_marginBottom="15dp" />

    <TextView
        android:text="@string/lunch_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/lunch_label"
        android:layout_below="@id/end"
        android:textColor="@color/caldroid_black"
        android:layout_marginStart="10dp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="1"
        android:columnCount="2"
        android:background="@android:drawable/dialog_holo_dark_frame"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lunch_label">

        <Spinner
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:layout_marginEnd="5dp"
            android:id="@+id/lunch_h"
            android:popupBackground="@android:drawable/dialog_holo_dark_frame" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:id="@+id/lunch_m"
            android:popupBackground="@android:drawable/dialog_holo_dark_frame"
            android:soundEffectsEnabled="true"
            android:layerType="none" />
    </GridLayout>


    <Button
        android:text="Nästa"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/submit_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@color/dark_red"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
        android:textSize="30sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:textAlignment="center" />

    <TextView
        android:text="@string/date_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/date_label"
        android:textColor="@android:color/black"
        android:layout_below="@+id/line"
        android:layout_alignStart="@+id/start_label" />


</RelativeLayout>
